Changes:     Fixed underlinement of header links for specific routes 	modified:   src/components/CollapseList/index.jsx 	modified:   src/components/Header/index.jsx 	modified:   src/index.scss

--- a/src/index.scss
+++ b/src/index.scss
@@ -32,6 +32,10 @@ header {
         .nav-link {
             font-size: 24px;
             text-decoration: none;
+
+            &.active {
+                text-decoration: underline;
+            }
         }
         .nav-link:hover {
             text-decoration: underline;
@@ -215,8 +219,8 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 139px;
-    margin: 139px 0;
+    gap: 50px; // 139px;
+    margin: 50px 0 139px; // 139px 0;
 
     .not-found {
         color: $backgroundRed;
